Fix number input increment buttons growing too high

--- a/src/styles/IconButton.module.css
+++ b/src/styles/IconButton.module.css
@@ -1,7 +1,6 @@
 .icon-button{
     background-color: var(--none);
     cursor: pointer;
-    padding: .5rem;
 }
 
 .icon-button>img{
